@@ -48,5 +48,6 @@ if test "$DIE" -eq 1; then
 fi
 
 $ACLOCAL -I $GLIMMER_PREFIX/share/aclocal \
+&& autoheader \
 && $AUTOMAKE --gnu --add-missing \
 && autoconf
