@@ -7,10 +7,11 @@ m4_define([verif_version],
 	[verif_major_version.verif_minor_version])
 
 AC_INIT([verif],[verif_version],[Magnus.Hagdorn@ed.ac.uk])
+AC_CONFIG_HEADERS(config.inc)
 AM_INIT_AUTOMAKE
 
 dnl minimum required glimmer version
-min_glimmer_version=0.5.5
+min_glimmer_version=0.5.7
 
 VERIF_MAJOR_VERSION=verif_major_version
 VERIF_MINOR_VERSION=verif_minor_version
@@ -23,7 +24,7 @@ AC_PROG_RANLIB
 AC_PROG_FC
 AC_LANG_PUSH(Fortran)
 AC_FC_SRCEXT(f90)
-FCFLAGS="$FCFLAGS -fpp"
+FCFLAGS="$FCFLAGS"
 dnl Checking for python
 AM_PATH_PYTHON([2.3],,[AC_MSG_RESULT(need at least python 2.3)])
 
