@@ -6,6 +6,10 @@
 ! ******************************************************************************
 !
 
+#ifdef HAVE_CONFIG_H
+#include <config.inc>
+#endif
+
 program verifglide
 
   ! load various modules
