@@ -1,3 +1,9 @@
+2006-06-18 Magnus Hagdorn
+ * src/fortran/Makefile.am: rename .f90 to .F90
+ * src/fortran/*.f90: rename to src/*.F90, include config.inc
+ * bootstrap: add call to autoheader
+ * configure.in: use autoheader, bump required glimmer vers to 0.5.7
+ 
 2005-12-19 Magnus Hagdorn
  * configure.in: bump version to 0.3, small fix
  * NEWS: update
